# tinyagent

./: .flake8  .gitignore  COPYING  Makefile  README.md  chat.sh  pyproject.toml
tinyagent/: __init__.py  agent.py  cli.py  tool.py  util.py
tinyagent/tools/: __init__.py  fetch.py  web_fetch.py  web_search.py
