[project]
name = "tinyagent"
version = "0.0"
description = "A minimal AI agent implementation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "crawl4ai>=0.7.4",
    "litellm>=1.78.5",
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.18.2",
]

[tool.mypy]
# error: Missing return statement
disable_error_code = ["return"]

[[tool.mypy.overrides]]
module = ["crawl4ai.*"]
ignore_missing_imports = true
